# weechat-discord

./: .gitignore  Cargo.toml  LICENSE  Makefile  build.rs  readme.md  symbols.c  symbols.h  weechat-discord.go
hooks/: pre-commit
src/: connection.rs  event_proc.rs  ffi.rs  lib.rs  macros.rs  message.rs  types.rs  util.rs  weecord.c
