[package]
name = "weecord"
version = "0.1.0"
authors = ["Porter Smith <flowbish@gmail.com>", "khyperia <khyperia@live.com>"]
build = "build.rs"

[build-dependencies]
gcc = "0.3"
pkg-config = "*"

[lib]
name = "weecord"
crate-type = ["dylib"]

[dependencies]
libc = "0.2"

[dependencies.discord]
git = "https://github.com/SpaceManiac/discord-rs.git"
# disable "voice" -> opus/sodiumoxide
default-features = false
features = []
