[package]
name = "weecord"
version = "0.1.0"
authors = ["Porter Smith <flowbish@gmail.com>", "khyperia <khyperia@live.com>"]
build = "build.rs"

[build-dependencies]
gcc = "*"
pkg-config = "*"

[lib]
name = "weecord"
crate-type = ["dylib"]

[dependencies]
libc = "*"
clippy = {version = "*", optional = true}

[dependencies.discord]
git = "https://github.com/SpaceManiac/discord-rs.git"
# disable "voice" -> opus/sodiumoxide
default-features = false
features = []

[features]
default = []
